fix issue with spinner being misaligned

--- a/src/components/global/Spinner/Spinner.scss
+++ b/src/components/global/Spinner/Spinner.scss
@@ -2,7 +2,7 @@
  * Styling for spinner component.
  */
 #spinner {
-  z-index: 1;
+  z-index: 9999;
   position: fixed;
   height: 100%;
   width: 100%;
